Alterado para Frank Ocean

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página de tributo: OffSpring</title>
+    <title>Página de tributo: Frank Ocean</title>
 
     <!-- Links  -->
     <link rel="stylesheet" href="./css/styles.css" />
@@ -13,90 +13,77 @@
     <div class="container">
       <!-- Cabeçalho -->
        <div class="header">
-        <h1 class="main-title">The OffSpring</h1>
-        <p class="main-paragraph">Uma banda de Rock formada na Califórnia</p>
+        <h1 class="main-title">Frank Ocean</h1>
+        <p class="main-paragraph">Frank Ocean, 
+          nascido como Christopher Edwin Breaux, é um cantor, compositor e produtor musical conhecido por sua abordagem inovadora e letras profundas.</p>
        </div>
        <!-- Imagem de destaque -->
         <div class="feature-img">
           <figure>
-            <img src="/img/offspring_1.jpg" alt="Quatro homens vestido de preto">
-            <figcaption>Integrantes da banda posando para a foto</figcaption>
+            <img src="/img/385px-Frank_Ocean_2022_Blonded.jpg" alt="Frank Ocean">
+            <figcaption>Frank Ocean by Andras Ladocsi</figcaption>
           </figure>
         </div>
         <!-- Biografia -->
          <div class="biograph-container">
-          <h2>Anos iniciais da banda</h2>
+          <h2>Anos iniciais da carreira</h2>
           <p>
-            Em 1984, os adolescentes
-            <span class="bold">Dexter Holland e Greg K</span>., que eram colegas
-            de ginásio em Huntington Beach, resolveram formar uma banda após
-            saírem de um concerto da banda de projeção local, Social Distortion.
-          </p>
-          <p>
-          Mais tarde, Kevin "Noodles" Wasserman foi chamado para banda pelo seu
-          <span class="bold"
-            >infame talento de conseguir bebidas alcoólicas</span
-          >
-          para os integrantes da banda, na época menores de idade.
-        </p>
-        <p>
-          Tocando sob o nome de Manic Subsidal, em 1985 a banda decide trocar de
-          nome para <span class="bold">The Offspring</span>. Seu primeiro
-          single, "I'll Be Waiting/Blackball", foi lançado no formato de vinil
-          pela gravadora independente Black Label Records e teve tiragem de mil
-          cópias.
-        </p>
-        <p>
-          Seu álbum de estreia, The Offspring, foi lançado pela gravadora
-          independente Nemesis Records em 1989 e produzido por Thom Wilson,
-          <span class="bold">
-            vendendo três mil cópias dessa estreia em vinil.</span
-          >
-        </p>
+            Frank Ocean, nascido Christopher Edwin Breaux em 28 de outubro de 
+            1987, é um cantor, compositor e produtor musical americano. 
+            Ele começou sua carreira como <span class="bold"> Compositor para artistas como Justin 
+            Bieber e John Legend</span> antes de ganhar destaque como membro do 
+            coletivo de hip-hop Odd Future. Em 2011, lançou sua primeira 
+            mixtape, Nostalgia, Ultra, que foi amplamente aclamada pela 
+            crítica e introduziu sua abordagem única ao R&B.</p>
+            <p>Em 2012, Frank Ocean lançou seu álbum de estreia, <span class="bold">Channel Orange</span>,
+               que foi um sucesso comercial e de crítica, ganhando o Grammy de 
+               Melhor Álbum Urbano Contemporâneo. O álbum abordou temas como 
+               sexualidade, amor e solidão, estabelecendo-o como uma voz 
+               inovadora no cenário musical.</p>
          </div>
          <!-- Citações -->
           <div class="quotes-container">
             <blockquote>
-              "Vender mais 10 milhões de álbuns não é a prioridade, lançar algo que
-              nos orgulhamos é."
+              "Ele sucintamente me define como um artista, onde estou agora e 
+              onde eu almejo estar. É sobre as histórias. Se eu escreve quatorze
+               histórias que eu amo, o próximo passo é criar um ambiente musical
+                ao redor que melhor envelope a história e todos os tipos de dádivas sônicas."
             </blockquote>
-            <p>Dexter Holland</p>
+            <p>Frank Ocean</p>
           </div>
           <!-- Curiosidades -->
            <div class="curiosites-container">
-            <h2>Curiosidades da Banda:</h2>
+            <h2>Curiosidades sobre o Frank:</h2>
             <ul>
-              <li>Noodles achava que a banda não seria um sucesso</li>
-              <li>O apelido de Noodles não vem do macarrão</li>
-              <li>Dexter é um <span class="bold">piloto</span> licenciado</li>
-              <li>
-                A primeira música da banda foi originada em um passeio de carro
+              <li> Frank Ocean mudou legalmente seu nome de Christopher Edwin Breaux para Christopher Francis Ocean em 2010. Ele escolheu "Frank Ocean" como um tributo ao personagem Frank Sinatra e ao filme "Ocean's 11</li>
+              <li>Em 2012, antes do lançamento de Channel Orange, Frank Ocean publicou uma carta no Tumblr revelando que sua primeira experiência amorosa havia sido com um homem. Essa carta foi elogiada por sua honestidade e coragem, sendo um momento marcante para a representação LGBTQ+ na música.</li>
+              <li>Ocean tem um padrão de lançar música de forma inesperada e sem promoção tradicional, o que mantém seus fãs constantemente especulando sobre novos lançamentos.</li>
+              
             </ul>
            </div>
            <!-- Segunda citação -->
             <div class="quotes-container">
               <blockquote>
-                "Chances thrown <br />
-                Nothing's free <br />
-                Longing for what used to be <br />
-                Still, it's hard <br />
-                Hard to see <br />
-                Fragile lives, shattered dreams"
+                "I believe that <br />
+                marriage isn't <br />
+                between man and woman, <br />
+                but between <br />
+                love and love <br />
               </blockquote>
-              <p>The offspring - The kids aren't alrigth</p>
+              <p> Frank Ocean - Sobre identidade e expressão</p>
             </div>
             <!-- Segunda imagem -->
              <div class="img-bold">
               <figure>
-                <img src="./img/offspring_2.jpeg" alt="Casa de show com uma banda cantando ao fundo">
-                <figcaption>A banda fazendo um show</figcaption>
+                <img src="./img/640px-Frank_Ocean_Coachella_2012_2.jpg" alt="Ocean se apesentando no Festival Coachella em 2012">
+                <figcaption>Ocean se apesentando no Festival Coachella em 2012</figcaption>
               </figure>
              </div>
              <!-- Mais informações -->
               <div class="more-info-container">
                 <h2>Mais informações:</h2>
                 <p> Para mais informações
-                  <a href="https://pt.wikipedia.org/wiki/The_Offspring">clique aqui</a>
+                  <a href="https://pt.wikipedia.org/wiki/Frank_Ocean">clique aqui</a>
               </div></p>
          
     </div>
